--- a/styles.css
+++ b/styles.css
@@ -96,34 +96,39 @@ flex-shrink: 0;
 }
 
 nav{    background: linear-gradient(90deg, rgba(235, 121, 15, 0.90) 0%, rgba(169, 143, 11, 0.90) 100%);
-   margin-left:21px}
+   margin-left:0;margin-right: 0;
+ padding:0;
+ 
+    
+}
 nav ul {
     list-style-type: none;
     margin: 10px 0px 0px 20px;
     padding: 0;
     display: flex;
     width : 100%;
-    
-    
-
-    
     color: black;
 }
+li{position:relative; margin-bottom: 0;}
 
 nav a {
     color:black;
     text-decoration: underline;
     font-weight: 600;
     padding: 10px;
-    display: block;
-    margin: 10px;
+    display:block;
+    
+    
+
 }
+
+
 
 .content {
     display: grid;
-    grid-template-columns: 66% 34%;
-    gap: 20px;
-    padding: 20px;
+    grid-template-columns: 66% 32%;
+    gap: 5px;
+    padding: 10px;
 }
 
 .left-column {
@@ -206,6 +211,29 @@ text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
       transform: translateY(-100%);
     }
   }
+  @-moz-keyframes my-animation2 {
+    from { -moz-transform: translateX(100%); }
+    to { -moz-transform: translateX(-100%); }
+  }
+  
+  /* for Chrome */
+  @-webkit-keyframes my-animation2 {
+    from { -webkit-transform: translateX(100%); }
+    to { -webkit-transform: translateX(-100%); }
+  }
+  
+  @keyframes my-animation2 {
+    from {
+      -moz-transform: translateX(100%);
+      -webkit-transform: translateX(100%);
+      transform: translateX(100%);
+    }
+    to {
+      -moz-transform: translateX(-100%);
+      -webkit-transform: translateX(-100%);
+      transform: translateX(-100%);
+    }
+  }
 
 
 #notice_head {
@@ -239,13 +267,13 @@ text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     background: rgba(170, 37, 93, 0.03);
 }
 .spotlight div{
-    -moz-transform: translateY(100%);
-    -webkit-transform: translateY(100%);
-    transform: translateY(100%);
+    -moz-transform: translateX(100%);
+    -webkit-transform: translateX(100%);
+    transform: translateX(100%);
     
-    -moz-animation: my-animation 15s linear infinite;
-    -webkit-animation: my-animation 15s linear infinite;
-    animation: my-animation 15s linear infinite;
+    -moz-animation: my-animation2 10s linear infinite;
+    -webkit-animation: my-animation2 10s linear infinite;
+    animation: my-animation2 10s linear infinite;
 }
 
 
@@ -266,9 +294,9 @@ footer {
     align-items: center;
     padding: 10px 20px;
     height:128px;
-    margin-left: 21px;
-   margin-right: 5px;
-   padding-left: 35px;
+    margin-left: 0px;
+   margin-right: 0px;
+   padding-left: 40px;
 }
 
 .footer-section {
@@ -348,12 +376,50 @@ footer {
     padding-bottom: 10px;
     text-align: center;
 }
-@media (max-width: 480px) {
-    .menu-button img {
-        width: 30px;
-        height: 30px;
-    }
 
+.dropdown-content1 a {
+    color: black;  /* Set the font color to black */
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    border-bottom: 1px solid white;
+    border-radius: 10px;  /* Make the corners rounded */
+    background-color: white;  /* Set background color to white */
+    margin: 10px;  /* Add some space between items */
+}
+
+
+
+.dropdown1{display:block;}
+
+li:hover > ul.dropdown-content1{display:block;}
+
+
+.dropdown-content1 h2, .dropdown-content1 h3 {
+    color: black;
+    margin: 10px;
+    padding-bottom: 10px;
+    text-align: center;
+}
+
+ul.dropdown-content1 {
+    display: none;  
+    position: absolute;
+    background:linear-gradient(90deg, rgba(235, 121, 15, 0.90) 0%, rgba(169, 143, 11, 0.90) 100%);
+    top:80%;
+    left:0;
+    min-width: 320px;
+    max-width: 360px;
+    padding: 0px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    white-space: normal;
+       
+}
+nav a:hover{background-color: #BDA318;}
+.dropdown-content1 a:hover{ background-color: #BDA318; }
+@media (max-width: 480px) {
+    
     .social-media a img {
         width: 20px;
         height: 20px;
@@ -361,12 +427,17 @@ footer {
 }
 @media (max-width: 768px) {
     
-  
-    nav {
-        display: block; /* Show nav when .show class is added */
-        max-height: calc(100vh - 60px); /* Make nav scrollable on small screens */
-        overflow-y:auto;
-    }
+  .content{grid-template-columns: 1fr;;}
+  nav ul {
+    flex-direction: column;
+    overflow-x: visible;
+    margin-left: 0;
+}
+
+nav li {
+    display: block;
+}
+
     footer{
         display: block;
         max-height: calc(100vh - 60px); /* Make nav scrollable on small screens */
@@ -376,9 +447,14 @@ footer {
         width:auto;
         text-align: center;
     }
-    .logo{display: none;}
+    h1{display: none;}
     .menu-button{min-width: 40%;}
-   
+    .notices{text-align: left;}
+    #s{display: none;}
+    nav a{border: 1px solid black}
+    
+
+    
 }
 
 
